--- a/src/popup.html
+++ b/src/popup.html
@@ -16,6 +16,9 @@
       margin-top: 0;
       padding-bottom: 10px;
       border-bottom: 1px solid #444;
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
     }
     #timestamps {
       list-style-type: none;
@@ -60,16 +63,41 @@
     .action-button:hover {
       background-color: #535353;
     }
+    #settings-button {
+      background-color: transparent;
+      border: none;
+      color: #FFFFFF;
+      cursor: pointer;
+      font-size: 20px;
+    }
+    #settings-tab {
+      display: none;
+    }
   </style>
 </head>
 <body>
-  <h2>CA6 VodTS</h2>
-  <button id="reload-button" class="action-button">Reload</button>
-  <button id="paste-button" class="action-button">Paste</button>
-  <button id="copy-button" class="action-button">Copy</button>
-  <button id="add-button" class="action-button">Add</button>
-  <div id="video-info"></div>
-  <ul id="timestamps"></ul>
+  <h2>
+    CA6 VodTS
+    <button id="settings-button">Settings</button>
+  </h2>
+  <div id="main-tab">
+    <button id="reload-button" class="action-button">Reload</button>
+    <button id="paste-button" class="action-button">Paste</button>
+    <button id="copy-button" class="action-button">Copy</button>
+    <button id="add-button" class="action-button">Add</button>
+    <div id="video-info"></div>
+    <ul id="timestamps"></ul>
+  </div>
+  <div id="settings-tab">
+    <h3>Settings</h3>
+    <label>
+      <input type="checkbox" id="only-vodts-checkbox"> Only VodTS 2.1 "~" Timestamps Format
+    </label>
+    <br>
+    <label>
+      <input type="checkbox" id="display-marker-checkbox"> Display Marker in player
+    </label>
+  </div>
   <script src="popup.js"></script>
 </body>
 </html>
